--- a/Assignment 2CSS.css
+++ b/Assignment 2CSS.css
@@ -6,7 +6,7 @@ body{
     display: flex;
     width: 1000px;
     height: 100px;
-    background-color: aqua;
+    background-color: rgb(247, 128, 203);
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@ body{
     display: flex;
     width: 1000px;
     height: 50px;
-    background-color: yellow;
+    background-color: rgb(214, 66, 247);
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -33,7 +33,7 @@ body{
     display: flex;
     width: 1000px;
     height: 550px;
-    background-color: lightblue;
+    background-color: rgb(230, 208, 208);
     margin: auto;
 }
 .lorem{
